<?xml version="1.0"?>
<package format="2">
  <name>obstacle_cloud_to_scan</name>
  <version>0.1.0</version>
  <description>ObstacleCloudToScan is a ROS2 package that processes 3D point cloud data from a LiDAR sensor, extracts obstacles, and converts them to a 2D LaserScan for navigation and mapping purposes.</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- ビルドツールの依存関係 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- パッケージの依存関係 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pointcloud_to_laserscan</depend>

  <!-- 実行時の依存関係 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

